fixed the labels to stretch for displays above 720px

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,3 +140,15 @@ button#submit:hover{
 
     
 }
+
+@media screen and (min-width:720px){
+    
+    input.userDetails,textarea{
+        width:100%;
+    }
+
+    select{
+        width:90%;
+    }
+
+}
